--- a/Naad_Exam3/nbproject/project.properties
+++ b/Naad_Exam3/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Naad_Exam3
-main.class=naad_exam3.Naad_Exam3
+main.class=naad_exam3.NaadExam3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
