--- a/Naad_FinalExam/nbproject/project.properties
+++ b/Naad_FinalExam/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Naad_FinalExam
-main.class=naad_finalexam.Naad_FinalExam
+main.class=naad_finalexam.NaadFinalExam
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
